@@ -14,6 +14,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       use_jobs_subdirs set to true. Default is false (do not distribute job files).
   b - TRQ-3116. Make qsub only retry on transient errors.
   b - TRQ-3122. Fix a problem with login_property not working correctly (cray only).
+  b - TRQ-3114. Fix an issue where an asynchronously started job is stuck with a 
+      substate of starting after a failed job start.
 
 5.0.2
   b - TRQ-3029. Make it so that pbs_server can't have active threads when the main
